--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
     "classlist.js": "^1.1.20150312",
+    "jquery": "^3.5.1",
     "leaflet": "^1.7.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
